fix bug members and due date wrap

--- a/src/assets/styles/cmps/task-preview.scss
+++ b/src/assets/styles/cmps/task-preview.scss
@@ -1,48 +1,52 @@
 .task-preview {
-  border-radius: 3px;
-  background-color: #fff;
-  text-align: start;
-  width: 100%;
-  box-shadow: 0 1px 0 #091e4240;
-  .task-not-cover {
-    padding: rem(6px) rem(8px);
-    gap: 0.25rem;
-    min-height: 2rem;
-  }
-  .task-cover {
+    border-radius: 3px;
+    background-color: #fff;
+    text-align: start;
     width: 100%;
-    border-radius: 3px 3px 0 0;
-  }
-  .task-preview:hover {
-    background-color: $clr2;
-    cursor: pointer;
-  }
-  .labels {
-    cursor: pointer;
-    flex-wrap: wrap;
-    gap: rem(4px);
-    min-width: rem(20px);
-    li {
-      cursor: pointer;
-      height: 0.5rem;
-      padding: 0 rem(6px) 0;
-      color: #fff;
-      min-width: rem(40px);
-      font-size: rem(12px);
-      line-height: rem(16px);
-      border-radius: 5px;
-      font-weight: 700;
-      transition: min-width 0.2s, height 0.2s linear 0.2s;
-      &.expended {
-        min-width: rem(56px);
-        height: 1rem;
-      }
+    box-shadow: 0 1px 0 #091e4240;
+    .task-not-cover {
+        padding: rem(6px) rem(8px);
+        gap: 0.25rem;
+        min-height: 2rem;
+        .task-info-icons {
+            flex-wrap: wrap;
+            gap: 0.5rem;
+        }
     }
-  }
-  p {
-    cursor: pointer;
-  }
-  .task-badges {
-    gap: rem(12px);
-  }
+    .task-cover {
+        width: 100%;
+        border-radius: 3px 3px 0 0;
+    }
+    .task-preview:hover {
+        background-color: $clr2;
+        cursor: pointer;
+    }
+    .labels {
+        cursor: pointer;
+        flex-wrap: wrap;
+        gap: rem(4px);
+        min-width: rem(20px);
+        li {
+            cursor: pointer;
+            height: 0.5rem;
+            padding: 0 rem(6px) 0;
+            color: #fff;
+            min-width: rem(40px);
+            font-size: rem(12px);
+            line-height: rem(16px);
+            border-radius: 5px;
+            font-weight: 700;
+            transition: min-width 0.2s, height 0.2s linear 0.2s;
+            &.expended {
+                min-width: rem(56px);
+                height: 1rem;
+            }
+        }
+    }
+    p {
+        cursor: pointer;
+    }
+    .task-badges {
+        gap: rem(12px);
+    }
 }
